add photobooth and settings page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,7 +4,7 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Home Page
+      {{ 'appbar_title.home' | translate }}
     </ion-title>
 
     <!-- only for testing button -->
