--- a/src/pages/trivias/trivias.html
+++ b/src/pages/trivias/trivias.html
@@ -1,18 +1,48 @@
-<!--
-  Generated template for the TriviasPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>trivias</ion-title>
+  <ion-navbar color='primary'>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>
+      Animal Trivias
+    </ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
-<ion-content padding>
-
+<ion-content>
+  <div class="header">
+    <img src="assets/imgs/trivias/home_header.png" alt="">
+    <div class="greenline"></div>
+  </div>
+  <div class="content">
+    <h3>All Challenge</h3>
+    <div class="levels">
+      <div class="level">
+        <div class="bg-level">
+          <img class="star1" src="assets/imgs/trivias/star_small_empty.png" alt="">
+          <img class="star2" src="assets/imgs/trivias/star_empty.png" alt="">
+          <img class="star3" src="assets/imgs/trivias/star_small_empty.png" alt="">
+          <h5>Zoo Fans Club - Easy</h5>
+        </div>
+      </div>
+      <hr>
+      <div class="level">
+        <div class="bg-level">
+          <img class="star1" src="assets/imgs/trivias/star_small_empty.png" alt="">
+          <img class="star2" src="assets/imgs/trivias/star_empty.png" alt="">
+          <img class="star3" src="assets/imgs/trivias/star_small_empty.png" alt="">
+          <h5>Zoo University - Medium</h5>
+        </div>
+      </div>
+      <hr>
+      <div class="level">
+        <div class="bg-level">
+          <img class="star1" src="assets/imgs/trivias/star_small_empty.png" alt="">
+          <img class="star2" src="assets/imgs/trivias/star_empty.png" alt="">
+          <img class="star3" src="assets/imgs/trivias/star_small_empty.png" alt="">
+          <h5>Zoo Keeper - Hard</h5>
+        </div>
+      </div>
+    </div>
+  </div>
 </ion-content>
