--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,11 +8,11 @@
     </ion-title>
 
     <!-- only for testing button -->
-    <!-- <ion-buttons end>
-      <button ion-button icon-only (click)="openSplashPage()">
-        <ion-icon name="aperture"></ion-icon>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="openIntroApp()">
+        <ion-icon name="browsers"></ion-icon>
       </button>
-    </ion-buttons> -->
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
