--- a/src/pages/zoo-map/zoo-map.html
+++ b/src/pages/zoo-map/zoo-map.html
@@ -22,11 +22,11 @@
   <div #map_canvas id="map_canvas"></div>
   <div class="zoo-navigation">
     <ul>
-      <li><a href="#"> <ion-icon name="search"></ion-icon> </a></li>
-      <li><a href="#">Food</a></li>
-      <li><a href="#">Parking</a></li>
-      <li><a href="#">Restroom</a></li>
-      <li><a href="#">Exit</a></li>
+      <li><a (click)="onSearchBtnTap()" href="#"> <ion-icon name="search"></ion-icon> </a></li>
+      <li><a (click)="onFoodBtnTap()" href="#">Food</a></li>
+      <li><a (click)="onParkingBtnTap()" href="#">Parking</a></li>
+      <li><a (click)="onRestroomBtnTap()" href="#">Restroom</a></li>
+      <li><a (click)="onExitBtnTap()" href="#">Exit</a></li>
     </ul>
   </div>
   <div class="lost-pos">
