--- a/src/pages/trivias/trivias.html
+++ b/src/pages/trivias/trivias.html
@@ -17,7 +17,7 @@
   <div class="content">
     <h3>All Challenge</h3>
     <div class="levels">
-      <div class="level">
+      <div (click)="openGame()" class="level">
         <div class="bg-level">
           <img class="star1" src="assets/imgs/trivias/star_small_empty.png" alt="">
           <img class="star2" src="assets/imgs/trivias/star_empty.png" alt="">
