update gameover trivia

--- a/src/pages/in-game/in-game.html
+++ b/src/pages/in-game/in-game.html
@@ -77,14 +77,35 @@
     </ion-slides>
   </div>
   <div id="gameover">
-    <h1>GAME OVER</h1>
-    <ion-buttons>
-      <button (click)="playAgain()" ion-button><span>Play Again</span>
-        <ion-icon name="arrow-forward"></ion-icon>
-      </button>
-      <button (click)="backToHomePage()" ion-button><span>Back to home page</span>
-        <ion-icon name="arrow-forward"></ion-icon>
-      </button>
-    </ion-buttons>
+    <div id="main-info">
+      <h1>GAME OVER</h1>
+      <div id="collected-stars">
+        <img class="star" src="assets/imgs/trivias/star_small.png" alt="">
+        <img class="star" src="assets/imgs/trivias/star_empty.png" alt="">
+        <img class="star" src="assets/imgs/trivias/star_small_empty.png" alt="">
+      </div>
+      <p>You've Collected</p>
+      <div id="star-score">
+        <h1>5</h1><img class="star" src="assets/imgs/trivias/star_small.png" alt="">
+      </div>
+      <div class="share-section">
+        <h6>You are now</h6>
+        <ion-buttons>
+          <button ion-button><img class="star" src="assets/imgs/trivias/star_small.png" alt="">The wildlife fans!</button>
+        </ion-buttons>
+        <ion-buttons>
+          <button ion-button color="button-color3">Share <ion-icon name="logo-facebook"></ion-icon></button>
+          <button ion-button color="button-color3">Share <ion-icon name="logo-twitter"></ion-icon></button>
+        </ion-buttons>
+      </div>
+    </div>
+    <div id="option-section">
+      <ion-buttons>
+        <button (click)="playAgain()" ion-button>Retry</button>
+      </ion-buttons>
+      <ion-buttons>
+        <button (click)="backToHomePage()" ion-button>Back to home page</button>
+      </ion-buttons>
+    </div>
   </div>
 </ion-content>
