--- a/src/pages/trivias/trivias.html
+++ b/src/pages/trivias/trivias.html
@@ -19,9 +19,9 @@
     <div class="levels">
       <div (click)="openGame()" class="level">
         <div class="bg-level">
-          <img class="star1" src="assets/imgs/trivias/star_small_empty.png" alt="">
-          <img class="star2" src="assets/imgs/trivias/star_empty.png" alt="">
-          <img class="star3" src="assets/imgs/trivias/star_small_empty.png" alt="">
+          <img id="easy-star1" class="star1" src="assets/imgs/trivias/star_small_empty.png" alt="">
+          <img id="easy-star2" class="star2" src="assets/imgs/trivias/star_empty.png" alt="">
+          <img id="easy-star3" class="star3" src="assets/imgs/trivias/star_small_empty.png" alt="">
           <h5>Zoo Fans Club - Easy</h5>
         </div>
       </div>
