add medium, hard

--- a/src/pages/trivias/trivias.html
+++ b/src/pages/trivias/trivias.html
@@ -28,18 +28,18 @@
       <hr>
       <div (click)="openGame('medium')" class="level">
         <div class="bg-level">
-          <img class="star1" src="assets/imgs/trivias/star_small_empty.png" alt="">
-          <img class="star2" src="assets/imgs/trivias/star_empty.png" alt="">
-          <img class="star3" src="assets/imgs/trivias/star_small_empty.png" alt="">
+          <img id="medium-star1" class="star1" src="assets/imgs/trivias/star_small_empty.png" alt="">
+          <img id="medium-star2" class="star2" src="assets/imgs/trivias/star_empty.png" alt="">
+          <img id="medium-star3" class="star3" src="assets/imgs/trivias/star_small_empty.png" alt="">
           <h5>Zoo University - Medium</h5>
         </div>
       </div>
       <hr>
       <div (click)="openGame('hard')" class="level">
         <div class="bg-level">
-          <img class="star1" src="assets/imgs/trivias/star_small_empty.png" alt="">
-          <img class="star2" src="assets/imgs/trivias/star_empty.png" alt="">
-          <img class="star3" src="assets/imgs/trivias/star_small_empty.png" alt="">
+          <img id="hard-star1" class="star1" src="assets/imgs/trivias/star_small_empty.png" alt="">
+          <img id="hard-star2" class="star2" src="assets/imgs/trivias/star_empty.png" alt="">
+          <img id="hard-star3" class="star3" src="assets/imgs/trivias/star_small_empty.png" alt="">
           <h5>Zoo Keeper - Hard</h5>
         </div>
       </div>
