--- a/src/pages/animal-collection/animal-collection.html
+++ b/src/pages/animal-collection/animal-collection.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the AnimalCollectionPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar color='primary'>
     <button ion-button menuToggle>
@@ -28,13 +22,13 @@
     </ion-item>
   <ion-grid>
     <ion-row *ngFor="let animal of animalColl; let i = index">
-      <ion-col>
+      <ion-col (click)="openDetailAnimal(animal[0])">
         <div class="name">
           <span>{{animal[0].name}}</span>
         </div>
         <img class="cover" src="{{animal[0].assets}}" alt="">
       </ion-col>
-      <ion-col>
+      <ion-col (click)="openDetailAnimal(animal[1])">
         <div class="name">
           <span>{{animal[1].name}}</span>
         </div>
