fix the stupid error

--- a/src/pages/detail-animal/detail-animal.html
+++ b/src/pages/detail-animal/detail-animal.html
@@ -9,7 +9,7 @@
 
 <ion-content style="background-color: #f2f2f2;">
   <div id="section-1">
-    <h1>{{animal.name}}</h1>
+    <h1>{{animal?.name}}</h1>
     <img src="assets/imgs/default_ing.jpg" alt="">
     <div class="instruction">
       <h6>scroll down</h6>
@@ -30,8 +30,8 @@
       <p>Click here to listen to the audio</p>
     </div>
     <div class="animal-desc">
-      <p>{{animal.summary.description}}</p>
-      <div [ngStyle]="{'background-image': 'url('+animal.assets+')'}">
+      <p>{{animal?.summary.description}}</p>
+      <div [ngStyle]="{'background-image': 'url('+animal?.assets+')'}">
         <div class="circle-audio">
           <ion-icon name="volume-up"></ion-icon>
         </div>
@@ -41,22 +41,22 @@
       <h3 class="title">Sumatran Tiger</h3>
       <div class="subtitle">
         <h6>population in the wild</h6>
-        <h3>{{animal.summary.population}}</h3>
+        <h3>{{animal?.summary.population}}</h3>
       </div>
       <hr>
       <div class="subtitle">
         <h6>habitat</h6>
-        <h3>{{animal.summary.habitat}}</h3>
+        <h3>{{animal?.summary.habitat}}</h3>
       </div>
       <hr>
       <div class="subtitle">
         <h6>age</h6>
-        <h3>{{animal.summary.age}}</h3>
+        <h3>{{animal?.summary.age}}</h3>
       </div>
       <hr>
       <div class="subtitle">
         <h6>food</h6>
-        <h3>{{animal.summary.food}}</h3>
+        <h3>{{animal?.summary.food}}</h3>
       </div>
     </div>
     <div class="wiki-references">
@@ -71,16 +71,16 @@
       </div>
     </div>
     <div class="animal-location">
-      <p>You can find {{animal.name}} in Ragunan at</p>
-      <div #animal_location id="animal-loc"></div>
+      <p>You can find {{animal?.name}} in Ragunan at</p>
+      <div #animalloc id="animalloc"></div>
     </div>
     <div class="fun-facts">
       <div class="title-segment">Fun Facts</div>
       <ion-card>
-        <ion-slides #slides>
-          <ion-slide *ngFor="let fact of animal.fun_facts">
+        <ion-slides #slides autoplay="5000" loop="true" speed="300">
+          <ion-slide *ngFor="let fact of animal?.fun_facts">
             <ion-card-header>
-              <img class="normalin" src="{{animal.assets}}" alt="">
+              <img class="normalin" src="{{animal?.assets}}" alt="">
               <img class="icon-funfact" src="assets/imgs/icon_funfacts.png" alt="">
               <div class="funfact-content">
                 <p>{{fact}}</p>
@@ -93,5 +93,19 @@
         </ion-card-content>
       </ion-card>
     </div>
+    <div class="fun-facts-instruction">
+      <img src="assets/imgs/icon_swipearrow_left.png" alt="">
+      <span style="margin: 0 8px; font-size: 10px;">swipe left or right to see more facts</span>
+      <img src="assets/imgs/icon_swipearrow_right.png" alt="">
+    </div>
   </div>
+  <ion-fab bottom right>
+    <button ion-fab mini>
+      <ion-icon name="share"></ion-icon>
+    </button>
+    <ion-fab-list side="top">
+      <button ion-fab mini><ion-icon name="logo-facebook"></ion-icon></button>
+      <button ion-fab mini><ion-icon name="logo-twitter"></ion-icon></button>
+    </ion-fab-list>
+  </ion-fab>
 </ion-content>
